crates/keron-lang/tests/corpus/errors/check/unknown_var.keron
val a = 1
val b = unknown + a
